--- a/gfdfbiscuits.html
+++ b/gfdfbiscuits.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Recipes Curated by Emily</title>
-  <link rel="icon" href="assets/images/logos/el_logo.png" type="image/png" sizes="16x16"/>
+  <link rel="icon" href="assets/images/el_logo.png" type="image/png" sizes="16x16"/>
   <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
@@ -82,24 +82,24 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">GF/DF Pumpkin Bread</h5>
+          <h5 class="py-3 mb-0 h2">GF/DF Biscuits</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Rachl Mansfield</small>
+          <small class="ps-1">Author: Wife Mama Foodie</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>July 20th, 2023</small>
+          <small>July 29th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/gfdfpumpkinbread.jpg" class="w-100" >
+          <img src="assets/images/food/gfdfbiscuits.png" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -111,15 +111,15 @@
               </li>
               <li>
                 <small>Cook Time</small>
-                <span>50-60 minutes</span>
+                <span>10-12 minutes</span>
               </li>
               <li>
                 <small>Total Time</small>
-                <span>1 hour 5 minutes</span>
+                <span>27 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>8-10 slices
+                <span>6-7 large biscuits
                 </span>
               </li>
             </ul>
@@ -128,49 +128,43 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
+                <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 15-ounce can organic unsweetened pumpkin</label>
+                  <label class="form-check-label" for="milk">1 cup unsweetened almond milk</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon baking soda</label>
+                  <label class="form-check-label" for="acv">1 tablespoon ACV</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/2 teaspoon baking powder</label>
+                  <label class="form-check-label" for="flour">2 cups gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1/2 cup coconut sugar</label>
+                  <label class="form-check-label" for="flour">2/3 cup almond flour</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 teaspoons vanilla extract</label>
+                  <label class="form-check-label" for="cornstarch">1/4 cup cornstarch</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/3 cup liquid refined coconut oil</label>
+                  <label class="form-check-label" for="bakingpowder">1 tablespoon baking powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">3 eggs</label>
+                  <label class="form-check-label" for="salt">1/8 teaspoon salt</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 1/2 cup gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spoon & leveled)</label>
+                  <label class="form-check-label" for="butter">1/2 cup cold salted butter</label>
+                  <label class="form-check-label" for="butter"><i>*It's ideal that the butter is very cold for light, flaky, buttery biscuits.</i></label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 teaspoon nutmeg</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon cinnamon</label>
-                </div>
-                <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 teaspoon pumpkin pie spice</label>
+                  <label class="form-check-label" for="honey">2 tablespoons honey</label>
                 </div>
               </div>
             </div>
@@ -181,31 +175,43 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a loaf pan with parchment paper. Be sure to grease the bottom of the pan before placing the parchment paper on top. Set aside.
+                  Preheat oven to 450°F and line a cookie sheet with nonstick parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large bowl, mix together pumpkin, baking soda and baking powder.
+                  In a small glass, mix together the milk and vinegar and let sour while you prepare your biscuit mix.
                 </li>
                 <li>
                   <span>3</span>
-                  Add in the coconut sugar, vanilla and mix.
+                  In a bowl, combine gluten free flour, almond flour, cornstarch, baking powder, and salt. Use a pastry blender to blend in the butter until the mixture is coarse and crumbly (butter should be pea-sized).
                 </li>
                 <li>
                   <span>4</span>
-                  Beat in the eggs and oil until smooth.
+                  Add honey and pour in the soured milk, stirring just until combined. Dough should be moist, not dry and crumbly. If your dough is dry, add milk little by little until the dough comes together. 
                 </li>
                 <li>
                   <span>5</span>
-                  Add in the flour and spices then mix until smooth.
+                  Dump the dough out onto a lightly floured surface or piece of parchment paper.
                 </li>
                 <li>
                   <span>6</span>
-                  Add batter to pan and bake for 50-60 minutes or until fully cooked.
+                  Sprinkle a bit of flour on top, if needed, and press or roll dough to 1-inch thick. Fold the dough in half and pat again to 1-inch thick. Dough should be moist and a little sticky. Dust with a little gluten free flour if needed, but don't use too much or it will make the biscuits hard.
                 </li>
                 <li>
                   <span>7</span>
-                  Allow the bread to cool before slicing.
+                  Repeat folding and rolling 1 or 2 more times. This makes the biscuits fluffy with lots of flakey layers. On the final roll, keep the dough thick, around 1", before cutting.
+                </li>
+                <li>
+                  <span>8</span>
+                  Use the rim of a round glass to cut biscuits out of dough. Place biscuits close together on the parchment-lined baking sheet.
+                </li>
+                <li>
+                  <span>9</span>
+                  Gently combine the scraps and repeat the process until all dough is used up.
+                </li>
+                <li>
+                  <span>10</span>
+                  Bake for 10-12 minutes, or until biscuits are lightly golden and center is fully cooked.
                 </li>
               </ul>
             </div>
