--- a/gfdfpeachpie.html
+++ b/gfdfpeachpie.html
@@ -131,7 +131,7 @@
                 <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="flour">2 1/4 cups gluten free all-purpose flour</label>
+                  <label class="form-check-label" for="flour">2 1/4 cups gluten free all-purpose flour (Bob's Red Mill 1 to 1 Baking Flour, spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
@@ -155,7 +155,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
-                    <label class="form-check-label" for="acv">1 teaspoon apple cider vinegar</label>
+                    <label class="form-check-label" for="acv">1 teaspoon ACV</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                     <input type="checkbox"  class="form-check-input">
