--- a/biscuits.html
+++ b/biscuits.html
@@ -119,7 +119,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>6-7 biscuits
+                <span>6-7 large biscuits
                 </span>
               </li>
             </ul>
