--- a/gfdfentrees.html
+++ b/gfdfentrees.html
@@ -167,6 +167,18 @@
           </figure>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/gfdfbiscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="GF/DF Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Biscuits</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </div>
     </section>
   </div>
