--- a/gfdf.html
+++ b/gfdf.html
@@ -70,7 +70,6 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Gluten Free, Dairy Free, & Refined Sugar Free</h5>
-      <div>*All recipes are either egg-free or can be made egg-free.</div>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
@@ -207,6 +206,16 @@
             </a>
             <figcaption class="mt-2">
               <a href="/gfdfpeachpie" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Peach Pie</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/gfdfbiscuits" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="GF/DF Biscuits">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Biscuits</a>
             </figcaption>
           </figure>
         </div>
