--- a/gfdfbiscuits.html
+++ b/gfdfbiscuits.html
@@ -128,7 +128,6 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
-                <strong>Dough</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="milk">1 cup unsweetened almond milk</label>
@@ -164,7 +163,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="honey">2 tablespoons honey</label>
+                  <label class="form-check-label" for="honey">2 tablespoons raw honey</label>
                 </div>
               </div>
             </div>
