--- a/index.html
+++ b/index.html
@@ -98,36 +98,6 @@
       <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a href="/cookies" class="tstbite-category-title">Cookies</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a href="/breads" class="tstbite-category-title">Breads</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
-            </a>
-            <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Healthier Desserts</a>
-            </figcaption>
-          </figure>
-        </div>
-        <div class="col-lg-2 col-md-4 col-4">
-          <figure class="my-3 text-center tstbite-card">
             <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
@@ -138,11 +108,21 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/pancakesicon.png" class="rounded-circle" >
+            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/other" class="tstbite-category-title">Other</a>
+              <a href="/breads" class="tstbite-category-title">Bread</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/cookies" class="tstbite-category-title">Cookies</a>
             </figcaption>
           </figure>
         </div>
@@ -152,7 +132,27 @@
               <img src="assets/images/food/savoryicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdf" class="tstbite-category-title">GF/DF</a>
+              <a href="/gfdf" class="tstbite-category-title">GF/DF Entrees</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/gfdfdicon.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/healthierdesserts" class="tstbite-category-title">GF/DF Desserts</a>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/other" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/pancakesicon.png" class="rounded-circle" >
+            </a>
+            <figcaption class="mt-2">
+              <a href="/other" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
         </div>
