--- a/savory.html
+++ b/savory.html
@@ -106,10 +106,10 @@
           <div class="col-md-4">
             <figure class="my-3 tstbite-card">
               <a href="/comingsoon" class="tstbite-animation rounded-6">
-                <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="Bread Crumb Mustard Chicken">
+                <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="GF/DF Bread Crumb Mustard Chicken">
               </a>
               <figcaption class="mt-2">
-                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Bread Crumb Mustard Chicken</a>
+                <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Bread Crumb Mustard Chicken</a>
               </figcaption>
             </figure>
           </div>
@@ -129,7 +129,7 @@
               <img src="assets/images/food/chileanseabass.jpeg" class="w-100" alt="Soy Ginger Chilean Sea Bass">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">'Soy' Ginger Chilean Sea Bass</a>
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Soy Ginger Chilean Sea Bass</a>
             </figcaption>
           </figure>
         </div>
