--- a/stirfry.html
+++ b/stirfry.html
@@ -231,7 +231,7 @@
                   Add chicken to the pan and stir. Serve immediately.
                 </li>
                 <li>
-                  <i>*Note: Stir Fry is a versatile dish, so feel free to add any additional vegetables you'd like (broccoli, cauliflower, etc.)</i>
+                  <i>*Note: Stir Fry is a versatile dish, so feel free to add any additional vegetables you'd like (broccoli, cauliflower, water chestnuts, etc.)</i>
                 </li>
               </ul>
             </div>
