--- a/gfdfentrees.html
+++ b/gfdfentrees.html
@@ -178,6 +178,16 @@
             </figcaption>
           </figure>
         </div>
+        <div class="col-md-4">
+          <figure class="my-3 tstbite-card">
+            <a href="/comingsoon" class="tstbite-animation rounded-6">
+              <img src="assets/images/food/mustardchicken.jpg" class="w-100" alt="GF/DF Bread Crumb Mustard Chicken">
+            </a>
+            <figcaption class="mt-2">
+              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Bread Crumb Mustard Chicken</a>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </div>
     </section>
