--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/cookies" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+              <img src="assets/images/food/cookiesicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
               <a href="/cookies" class="tstbite-category-title">Cookies</a>
@@ -160,7 +160,7 @@
     </section>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Popular Recipes</h5>
+      <h5 class="py-3 mb-0">Popular</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
