--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
+            <a href="/gfdfdesserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/gfdfdicon.png" class="rounded-circle" >
             </a>
             <figcaption class="mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">GF/DF Desserts</a>
+              <a href="/gfdfdesserts" class="tstbite-category-title">GF/DF Desserts</a>
             </figcaption>
           </figure>
         </div>
