--- a/breads.html
+++ b/breads.html
@@ -69,7 +69,7 @@
       </header>
 
     <section class="tstbite-components my-4 my-md-5">
-      <h5 class="py-3 mb-0">Breads</h5>
+      <h5 class="py-3 mb-0">Bread</h5>
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
