--- a/gfdf.html
+++ b/gfdf.html
@@ -215,7 +215,7 @@
               <img src="assets/images/food/gfdfbiscuits.png" class="w-100" alt="GF/DF Biscuits">
             </a>
             <figcaption class="mt-2">
-              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">GF/DF Biscuits</a>
+              <a href="/gfdfbiscuits" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Biscuits</a>
             </figcaption>
           </figure>
         </div>
